--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -83,6 +87,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 
 </project>
