--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 security.basic.enabled=false
-### MULTIPART (MultipartProperties)
-## Enable multipart uploads
-#spring.servlet.multipart.enabled=true
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
 ## Threshold after which files are written to disk.
 #spring.servlet.multipart.file-size-threshold=2KB
 ## Max file size.
@@ -25,3 +25,6 @@ security.basic.enabled=false
 ### File Storage Properties
 ## All files uploaded through the REST API will be stored in this directory
 #file.upload-dir=./uploads
+
+#spring.servlet.multipart.max-file-size=500KB
+#spring.servlet.multipart.max-request-size=500KB
