--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,14 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-        <!--<dependency>-->
+		<!-- https://mvnrepository.com/artifact/com.google.code.geocoder-java/geocoder-java -->
+		<dependency>
+			<groupId>com.google.code.geocoder-java</groupId>
+			<artifactId>geocoder-java</artifactId>
+			<version>0.15</version>
+		</dependency>
+
+		<!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
             <!--<optional>true</optional>-->
