--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-security.basic.enabled=false
+#security.basic.enabled=false
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
