--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,11 @@
 			<artifactId>geocoder-java</artifactId>
 			<version>0.15</version>
 		</dependency>
-
+		<dependency>
+			<groupId>me.atlis</groupId>
+			<artifactId>nominatim-api</artifactId>
+			<version>RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
